# agent-voice-mcp

./: ARCHITECTURE.md  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.ralph-teams/: PLAN-4.md
lazy_claude/: audio.py  av_audio.py  bridge.py  bridge_claude.py  bridge_main.py  bridge_vad.py  server.py  stt.py  tts.py
lazy_claude/static/: index.html
scripts/: test_macos_aec.py
skills/agent-voice/: SKILL.md
tests/: test_aec.py  test_audio.py  test_av_audio.py  test_bridge.py  test_bridge_claude.py  test_bridge_tts.py  test_bridge_vad.py  test_phase2_aec_integration.py  test_phase3_e2e.py  test_server.py  test_server_macos.py  test_stt.py  test_tts.py
